Save after W2D1 - Course: OOP Python. ´Il porte bien son nom´ + solution W1D5 dictionaries; DC Gold (Cesar)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "commentsHighlight.configurations": [
+
     {
       "prefixicon": "🐛 ",
       "text": "BUG:",
@@ -120,39 +121,29 @@
       "borderRadius": "6px",
       "backgroundColor": "rgba(77, 255, 77, 0.3)"
     },
-{
-      "prefixicon": "➕🔄️ ",
-      "text": "+OU= :",
-      "color": "#ecf0f1",
-      "border": "1px solid rgba(255, 128, 191, 0.3)",
+    {"prefixicon": "➕🔄️ ",
+      "text": "OTHER:",
+      "color": "#CE1D93",
+      // "border": "1px solid #FC34BD",
       "borderRadius": "6px",
-      "backgroundColor": "rgba(255, 228, 191, 0.3)"
+      "backgroundColor": "#000000"
     },
     {
       "prefixicon": "🤖 ",
       "text": "GPT:",
-      "color": "#ecf0f1",
-      "border": "1px solid rgba(255, 255, 255, 0.3)",
+      "color": "#a67c00",
+      "border": "1px solid #1E6072",
       "borderRadius": "6px",
-      "backgroundColor": "rgba(0, 0, 0, 0.3)"
+      "backgroundColor": "#000000",
     },
     {
       "prefixicon": "🟪📝 ",
       "text": "PROF:",
-      "color": "#ecf0f1",
-      "border": "1px solid rgba(255, 255, 255, 0.3)",
+      "color": "##ff1919",
+      "border": "1px solid #ff1919",
       "borderRadius": "6px",
-      "backgroundColor": "rgba(0, 0, 0, 0.3)"
-    }
-    {
-      "prefixicon": "📝 ",
-      "text": "WRITE:",
-      "color": "#ecf0f1",
-      "border": "1px solid rgba(255, 255, 255, 0.3)",
-      "borderRadius": "6px",
-      "backgroundColor": "rgba(0, 0, 0, 0.3)"
-    }
-
+      "backgroundColor": "#044141",
+    },
   ],
   "rainbowBrackets.isolatedRightBracketsColor": "#f00000",
   "rainbowBrackets.roundBracketsColor": [
